// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dotted s3 bucket 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
      "safeArtifactName": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`generic, github and spaces 1`] = `
Object {
  "mac": Array [
    Object {
      "file": "alpha-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "alpha-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "beta-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "beta-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "TestApp-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`generic, github and spaces 2`] = `
Object {
  "AsarIntegrity": "{\\"checksums\\":{\\"app.asar\\":\\"YYJnZcKYR79+/Un7xZ0fFqTRc7j3NvRfNDY1B1sLXGzBBvOPpir176RAxfQjNYXVwWGHSuXWpSrh5e1lEsamuA==\\",\\"electron.asar\\":\\"ksFqQ3X5rccdlVaj4tOiH6w3EuU2r0+74T+bQ+jo2tynH+7xSMMPv5tfF5ATKsBaDNOQPZtxMsFwjBuUI8XgSw==\\"}}",
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`github and spaces (publishAutoUpdate) 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": Object {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-linux.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-x86_64.AppImage",
          },
        ],
        "path": "TestApp-1.1.0-x86_64.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`mac artifactName  1`] = `
Object {
  "mac": Array [
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "Test App ßW_1.1.0_mac.zip",
          },
        ],
        "path": "Test App ßW_1.1.0_mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW_1.1.0_mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`mac artifactName  2`] = `
Object {
  "AsarIntegrity": "{\\"checksums\\":{\\"app.asar\\":\\"YYJnZcKYR79+/Un7xZ0fFqTRc7j3NvRfNDY1B1sLXGzBBvOPpir176RAxfQjNYXVwWGHSuXWpSrh5e1lEsamuA==\\",\\"electron.asar\\":\\"ksFqQ3X5rccdlVaj4tOiH6w3EuU2r0+74T+bQ+jo2tynH+7xSMMPv5tfF5ATKsBaDNOQPZtxMsFwjBuUI8XgSw==\\"}}",
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
      "safeArtifactName": "TestApp-1.1.0.zip",
    },
  ],
  "mac": Array [
    Object {
      "file": "latest-mac.json",
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`os macro 2`] = `
Object {
  "AsarIntegrity": "{\\"checksums\\":{\\"app.asar\\":\\"YYJnZcKYR79+/Un7xZ0fFqTRc7j3NvRfNDY1B1sLXGzBBvOPpir176RAxfQjNYXVwWGHSuXWpSrh5e1lEsamuA==\\",\\"electron.asar\\":\\"ksFqQ3X5rccdlVaj4tOiH6w3EuU2r0+74T+bQ+jo2tynH+7xSMMPv5tfF5ATKsBaDNOQPZtxMsFwjBuUI8XgSw==\\"}}",
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "Test App ßW.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 3`] = `
Array [
  "latest/mac/Test App ßW-1.1.0-mac.zip",
  "latest/mac/latest-mac.json",
  "latest/mac/latest-mac.yml",
  "latest/linux/TestApp-1.1.0.zip",
]
`;
